@@ -81,7 +81,7 @@ class TrustsDataControllerTest {
         ResponseEntity<PrivateIndividualTrusteeListApi> responseEntity = trustsDataController.getIndividualTrustees(
                 "transactionId", "overseasEntityId", "trustId", "requestId");
 
-        assertEquals(200, responseEntity.getStatusCodeValue());
+        assertEquals(200, responseEntity.getStatusCode().value());
     }
 
     @Test
@@ -97,7 +97,7 @@ class TrustsDataControllerTest {
         ResponseEntity<PrivateIndividualTrusteeListApi> responseEntity = trustsDataController.getIndividualTrustees(
                 "transactionId", "overseasEntityId", "trustId", "requestId");
 
-        assertEquals(404, responseEntity.getStatusCodeValue());
+        assertEquals(404, responseEntity.getStatusCode().value());
         assertEquals(1, StringUtils.countMatches(outputStreamCaptor.toString(),"Could not find any individual trustee for overseas entity overseasEntityId"));
 
     }
@@ -117,7 +117,7 @@ class TrustsDataControllerTest {
         ResponseEntity<PrivateCorporateTrusteeListApi> responseEntity = trustsDataController.getCorporateTrustees(
                 "transactionId", "overseasEntityId", "trustId", "requestId");
 
-        assertEquals(200, responseEntity.getStatusCodeValue());
+        assertEquals(200, responseEntity.getStatusCode().value());
     }
 
     @Test
@@ -133,7 +133,7 @@ class TrustsDataControllerTest {
         ResponseEntity<PrivateCorporateTrusteeListApi> responseEntity = trustsDataController.getCorporateTrustees(
                 "transactionId", "overseasEntityId", "trustId", "requestId");
 
-        assertEquals(404, responseEntity.getStatusCodeValue());
+        assertEquals(404, responseEntity.getStatusCode().value());
         assertEquals(1, StringUtils.countMatches(outputStreamCaptor.toString(),"Could not find any corporate trustee for overseas entity overseasEntityId"));
 
     }
@@ -151,9 +151,9 @@ class TrustsDataControllerTest {
         ResponseEntity<PrivateTrustDetailsListApi> responseEntity = trustsDataController.getTrustDetails(
                 "transactionId", "overseasEntityId", "requestId");
 
-        assertEquals(200, responseEntity.getStatusCodeValue());
+        assertEquals(200, responseEntity.getStatusCode().value());
         assertEquals(1, responseEntity.getBody().getData().size());
-        assertEquals(HASHED_ID, responseEntity.getBody().getData().get(0).getHashedId());
+        assertEquals(HASHED_ID, responseEntity.getBody().getData().getFirst().getHashedId());
     }
 
 
@@ -169,10 +169,10 @@ class TrustsDataControllerTest {
         ResponseEntity<PrivateTrustLinksListApi> responseEntity = trustsDataController.getTrustLinks(
                 "transactionId", "overseasEntityId", "requestId");
 
-        assertEquals(200, responseEntity.getStatusCodeValue());
+        assertEquals(200, responseEntity.getStatusCode().value());
         assertEquals(1, responseEntity.getBody().getData().size());
-        assertEquals(HASHED_ID, responseEntity.getBody().getData().get(0).getHashedId());
-        assertEquals(CORP_BODY_HASHED_ID, responseEntity.getBody().getData().get(0).getHashedCorporateBodyAppointmentId());
+        assertEquals(HASHED_ID, responseEntity.getBody().getData().getFirst().getHashedId());
+        assertEquals(CORP_BODY_HASHED_ID, responseEntity.getBody().getData().getFirst().getHashedCorporateBodyAppointmentId());
     }
 
     @Test
@@ -183,7 +183,7 @@ class TrustsDataControllerTest {
         ResponseEntity<PrivateCorporateTrusteeListApi> responseEntity = trustsDataController.getCorporateTrustees(
                 "transactionId", "overseasEntityId", "trustId", "requestId");
 
-        assertEquals(404, responseEntity.getStatusCodeValue());
+        assertEquals(404, responseEntity.getStatusCode().value());
     }
 
     @Test
@@ -195,7 +195,7 @@ class TrustsDataControllerTest {
         ResponseEntity<PrivateIndividualTrusteeListApi> responseEntity = trustsDataController.getIndividualTrustees(
                 "transactionId", "overseasEntityId", "trustId", "requestId");
 
-        assertEquals(404, responseEntity.getStatusCodeValue());
+        assertEquals(404, responseEntity.getStatusCode().value());
     }
 
     @Test
@@ -208,7 +208,7 @@ class TrustsDataControllerTest {
         ResponseEntity<PrivateTrustLinksListApi> responseEntity = trustsDataController.getTrustLinks(
                 "transactionId", "overseasEntityId", "requestId");
 
-        assertEquals(404, responseEntity.getStatusCodeValue());
+        assertEquals(404, responseEntity.getStatusCode().value());
         assertEquals(1, StringUtils.countMatches(outputStreamCaptor.toString(), "Could not find any trust links for overseas entity overseasEntityId"));
         assertNull(responseEntity.getBody());
     }
@@ -222,7 +222,7 @@ class TrustsDataControllerTest {
         System.setOut(new PrintStream(outputStreamCaptor));
         ResponseEntity<PrivateTrustDetailsListApi> responseEntity = trustsDataController.getTrustDetails(
                 "transactionId", "overseasEntityId", "requestId");
-        assertEquals(404, responseEntity.getStatusCodeValue());
+        assertEquals(404, responseEntity.getStatusCode().value());
         assertEquals(1, StringUtils.countMatches(outputStreamCaptor.toString(),
                 "Could not find any trust details for overseas entity overseasEntityId"));
         assertNull(responseEntity.getBody());
@@ -239,7 +239,7 @@ class TrustsDataControllerTest {
         ResponseEntity<PrivateTrustLinksListApi> responseEntity = trustsDataController.getTrustLinks(
                 "transactionId", "OE123456", "requestId");
 
-        assertEquals(404, responseEntity.getStatusCodeValue());
+        assertEquals(404, responseEntity.getStatusCode().value());
         assertEquals(1, StringUtils.countMatches(outputStreamCaptor.toString(), "Could not find any trust links for overseas entity OE123456"));
         assertNull(responseEntity.getBody());
     }
@@ -257,7 +257,7 @@ class TrustsDataControllerTest {
         ResponseEntity<PrivateTrustDetailsListApi> responseEntity = trustsDataController.getTrustDetails(
                 "transactionId", "OE123456", "requestId");
 
-        assertEquals(404, responseEntity.getStatusCodeValue());
+        assertEquals(404, responseEntity.getStatusCode().value());
         assertEquals(1, StringUtils.countMatches(outputStreamCaptor.toString(),
                 "Could not find any trust details for overseas entity OE123456"));
         assertNull(responseEntity.getBody());
@@ -274,7 +274,7 @@ class TrustsDataControllerTest {
         ResponseEntity<PrivateTrustLinksListApi> responseEntity = trustsDataController.getTrustLinks(
                 "transactionId", "OE123456", "requestId");
 
-        assertEquals(404, responseEntity.getStatusCodeValue());
+        assertEquals(404, responseEntity.getStatusCode().value());
         assertEquals(1, StringUtils.countMatches(outputStreamCaptor.toString(), "Could not find any trust links for overseas entity OE123456"));
         assertNull(responseEntity.getBody());
     }
@@ -287,7 +287,7 @@ class TrustsDataControllerTest {
         ResponseEntity<PrivateTrustDetailsListApi> responseEntity = trustsDataController.getTrustDetails(
                 "transactionId", "overseasEntityId", "requestId");
 
-        assertEquals(404, responseEntity.getStatusCodeValue());
+        assertEquals(404, responseEntity.getStatusCode().value());
         assertNull(responseEntity.getBody());
     }
 
@@ -298,7 +298,7 @@ class TrustsDataControllerTest {
         ResponseEntity<PrivateTrustLinksListApi> responseEntity = trustsDataController.getTrustLinks(
                 "transactionId", "overseasEntityId", "requestId");
 
-        assertEquals(404, responseEntity.getStatusCodeValue());
+        assertEquals(404, responseEntity.getStatusCode().value());
         assertNull(responseEntity.getBody());
     }
 
@@ -313,8 +313,8 @@ class TrustsDataControllerTest {
         ResponseEntity<PrivateTrustLinksListApi> linksResponseEntity = trustsDataController.getTrustLinks(
                 "transactionId", "overseasEntityId", "requestId");
 
-        assertEquals(404, responseEntity.getStatusCodeValue());
-        assertEquals(404, linksResponseEntity.getStatusCodeValue());
+        assertEquals(404, responseEntity.getStatusCode().value());
+        assertEquals(404, linksResponseEntity.getStatusCode().value());
         assertNull(responseEntity.getBody());
         assertNull(linksResponseEntity.getBody());
     }
@@ -355,8 +355,8 @@ class TrustsDataControllerTest {
         ResponseEntity<PrivateTrustDetailsListApi> linksResponseEntity = trustsDataController.getTrustDetails(
                 "transactionId", "overseasEntityId", "requestId");
 
-        assertEquals(500, responseEntity.getStatusCodeValue());
-        assertEquals(500, linksResponseEntity.getStatusCodeValue());
+        assertEquals(500, responseEntity.getStatusCode().value());
+        assertEquals(500, linksResponseEntity.getStatusCode().value());
     }
 
     private PrivateIndividualTrusteeApi createIndividualTrustApiMock() {
